import "TriviaGameOverview.proto";
import "TriviaQuestionFormat.proto";
import "CompleteUser.proto";

package proto;

option java_package = "com.lvl6.pictures.eventprotos";
option java_outer_classname = "LoginResponseEventProto";

message LoginResponseEvent {
	optional CompleteUserProto sender = 1;
	repeated GameResultsProto completedGames = 2;
	repeated OngoingGameProto myTurn = 3;
	repeated OngoingGameProto notMyTurn = 4;
	repeated QuestionProto newQuestions = 5;
	
	optional LoginResponseStatus status = 6;
	
	enum LoginResponseStatus {
		SUCCESS_LOGIN_TOKEN = 0;
		SUCCESS_FACEBOOK_ID = 1;
		SUCCESS_NAME_PASSWORD = 2;
		INVALID_LOGIN_TOKEN = 3;
		INVALID_FACEBOOK_ID = 4;
		INVALID_NAME_PASSWORD = 5;
	}
}