package proto;

option java_package = "com.lvl6.pictures.protostructures";
option java_outer_classname = "UserProto";

//must be included in every request and response events
//links the response to the person who sent the corresponding request
message BasicUserProto {
	optional string userId = 1;
	optional string udid = 2;
}

message CompleteUserProto {
	optional string userId = 1;
	optional int64 lastLogin = 2;
	optional string name = 3;
	optional string udid = 4;
	optional string facebookId = 5;
	
	//need items user bought
}